unified_tests/builtins/assert_argument_type_mismatch/expect/build.text.stderr
lib.copp:2:12: error: argument 1 to 'assert' must be boolean, got int64
      assert(1)
             ^
